# eq

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: eq.scd
src/: main.rs
