[package]
name = "eq"
version = "1.0.1"
authors = ["Chris Koehnke <chris@koehnke.xyz>"]
description = "A simple command line interface for Elasticsearch queries."
edition = "2018"

[dependencies]
elasticsearch = "7.10.0-alpha.1"
serde_json = "~1"
structopt = "0.3"
# Updated tokio support in elasticsearch-rs
# https://github.com/elastic/elasticsearch-rs/issues/152
tokio = { version = "0.2", features = ["full"] }
url = "2.2"

[badges]
maintenance = { status = "experimental" }

# a few tweaks for reducing the binary size from
# https://github.com/johnthagen/min-sized-rust
[profile.release]
# https://blog.rust-lang.org/inside-rust/2020/06/29/lto-improvements.html
# https://blog.llvm.org/posts/2016-06-21-thinlto-scalable-and-incremental-lto/
lto = 'thin'
codegen-units = 1
panic = 'abort'
