[package]
name = "eq"
version = "1.0.5"
authors = ["Chris Koehnke <chris@koehnke.xyz>"]
description = "A simple command line interface for Elasticsearch queries."
edition = "2018"

[dependencies]
elasticsearch = "7.12.0-alpha.1"
serde_json = "~1"
structopt = "0.3"
tokio = { version = "*", features = ["full"] }
url = "2.2"

# a few tweaks for reducing the binary size from
# https://github.com/johnthagen/min-sized-rust
[profile.release]
# https://blog.rust-lang.org/inside-rust/2020/06/29/lto-improvements.html
# https://blog.llvm.org/posts/2016-06-21-thinlto-scalable-and-incremental-lto/
lto = 'thin'
codegen-units = 1
panic = 'abort'
